@@ -49,6 +49,7 @@ void vips_error_system( int err, const char *domain, const char *fmt, ... )
 void vips_verror_system( int err, const char *domain, 
 	const char *fmt, va_list ap );
 void vips_error_g( GError **error );
+void vips_g_error( GError **error );
 void vips_warn( const char *domain, const char *fmt, ... )
 	__attribute__((format(printf, 2, 3)));
 void vips_vwarn( const char *domain, const char *fmt, va_list ap );
