@@ -21,6 +21,8 @@
 - vips_system() now supports many input images and you can change image
   argument order
 - support 16-bit palette TIFFs, plus palette TIFFs can have an alpha
+- libgsf is now required 
+- dzsave can directly write a ZIP file 
 
 6/3/14 started 7.38.6
 - grey ramp minimum was wrong
